# FactorEngine

./: .gitignore  README.md  pyproject.toml  setup.py
dataflow/: __init__.py  cache.py  collector.py  dataflow.py  events.py  manager.py
dataflow/bars/: __init__.py  aggregator.py  worker.py
dataflow/books/: __init__.py  worker.py
dataflow/livetrading/: __init__.py  collector.py  events.py  manager.py
dataflow/okx/: __init__.py  bar_collector.py  book_collector.py  symbols.py  trade_collector.py
dataflow/simulation/: __init__.py  generator.py  manager.py  symbols.py  worker.py
dataflow/trades/: worker.py
docs/: TUTORIAL.md
docs/20260404/: architecture_design.md  test_report.md  tutorial.md
docs/20260406/: array_dataflow_refactor.md  development_plan.md  event_schema.md  refactor_design.md
docs/20260407/: scheduler_tutorial.md  (+2 more)
examples/: engine_rt_demo.py
factorengine/: __init__.py  engine.py
native/: CMakeLists.txt  build.sh
native/include/fe/ops/: binary.hpp  bivariate.hpp  rolling_ema.hpp  rolling_extremal.hpp  rolling_mean.hpp  rolling_median.hpp  rolling_minmax.hpp  rolling_rank.hpp  rolling_skew.hpp  rolling_std.hpp  rolling_sum.hpp  rolling_wma.hpp  rolling_zscore.hpp  shift.hpp  spec.hpp  treap_rank.hpp  unary.hpp
native/include/fe/runtime/: factor_graph.hpp  inference_engine.hpp  kernels.hpp  symbol_runner.hpp
native/pybind/: fe_ops_bind.cpp  fe_runtime_bind.cpp
tests/: run_test_dataflow.sh  test_dataflow_core.py  test_dataflow_live.py  test_live.py  test_live_vs_sim.py  test_micro_ws.py  test_scheduler_live.py  test_simulation.py
(+55 files in other folders)
